--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_API_BASE_URL=http://127.0.0.1:8000
-VITE_API_AUTH_ENDPOINT=/api/auth/student/login/
+VITE_API_BASE_URL=http://127.0.0.1:8000/api
